# OpenFrontIO

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierrc  .vercelignore  API.md  AUDIT_REPORT.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTROL_FEATURES.md  CREDITS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.local  HOW_TO_RUN_THE_BOT.md  LICENSING.md  PARTY_MATCHMAKING.md  PR_DESCRIPTION.md  RANKED_MATCHMAKING.md  README.md  STRUCTURE.md  TEST_NEW_FEATURES.md  TODO.txt  base.Dockerfile  biome.json  build-demo.sh  build-deploy.sh  build.sh  config.example.json  deploy-demo.sh  deploy-local.sh  deploy.sh  (+37 more)
.claude/: pr-notes.md  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml
.husky/: pre-commit
.project/: CLAUDE.md  ports.json
__mocks__/: jose.js
capsule/: Cargo.toml  build.rs
capsule/proto/: world_events.proto
capsule/src/: geo.rs  ingest.rs  main.rs  multiplexer.rs
data/: db.json_o
docs/: 01-overview.md  02-architecture.md  03-core-systems.md  04-client-server.md  05-execution-system.md  06-adding-features.md  07-development.md  08-radial-menu.md  API.md  Architecture.md  AxumControlPlaneSpike.md  CoarseToFine.md  MaskExpanding.md  MultiSourceAnyTargetBFS.md  index.md  (+8 more)
rust/control-plane/: Cargo.toml
rust/control-plane/src/: main.rs
rust/dioxus-ui/: Cargo.toml  test.html
rust/dioxus-ui/src/: lib.rs  runtime.rs  runtime_protocol.rs
rust/dioxus-ui/src/components/: account_modal.rs  alert_frame.rs  build_menu.rs  chat_display.rs  chat_modal.rs  control_panel.rs  desktop_nav_bar.rs  emoji_table.rs  events_display.rs  flag_input.rs  flag_input_modal.rs  footer.rs  game_info_modal.rs  game_left_sidebar.rs  game_right_sidebar.rs  game_starting_modal.rs  heads_up_message.rs  hello_world.rs  help_modal.rs  host_lobby_modal.rs  immunity_timer.rs  join_private_lobby_modal.rs  lang_selector.rs  language_modal.rs  leaderboard.rs  main_layout.rs  matchmaking.rs  mobile_nav_bar.rs  mod.rs  modal_overlay.rs  multi_tab_modal.rs  news_modal.rs  pattern_input.rs  performance_overlay.rs  play_page.rs  player_info_overlay.rs  player_moderation_modal.rs  player_panel.rs  public_lobby.rs  radial_menu.rs  (+13 more)
rust/dioxus-ui/src/contexts/: chat_modal_context.rs  leaderboard_context.rs  mod.rs  multi_tab_context.rs  player_moderation_context.rs  settings_context.rs  team_stats_context.rs  win_modal_context.rs
rust/dioxus-ui/src/providers/: chat_modal_provider.rs  leaderboard_provider.rs  mod.rs  multi_tab_provider.rs  player_moderation_provider.rs  settings_provider.rs  team_stats_provider.rs  win_modal_provider.rs
rust/dioxus-ui/tests/: ui_runtime_validation_harness.rs
rust/wasm-core/: Cargo.toml
rust/wasm-core/src/: lib.rs
rust/wasm-core/src/pathfinding/: astar_rail.rs  astar_water.rs  astar_water_bounded.rs  mod.rs  priority_queue.rs
wasm/pathfinding/: Cargo.toml
wasm/pathfinding/src/: lib.rs
(+2284 files in other folders)
