[package]
name = "openfront-control-plane"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
