[package]
name = "dioxus-ui"
version = "0.1.0"
edition = "2021"
description = "Dioxus UI components for OpenFrontIO game"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dioxus core with web feature (latest)
dioxus = { version = "0.7", features = ["web"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "CustomEvent",
    "CustomEventInit",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Node",
    "CssStyleDeclaration",
    "Storage",
] }

# Serialization for JS interop
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Logging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
