[package]
name = "wasm-core"
version = "0.1.0"
edition = "2021"
description = "WASM-compiled compute library for OpenFront.io"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# For better panic messages in WASM (optional)
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
